# Knowledge_Hub

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: App.jsx
front/: package-lock.json
server/: pyproject.toml
server/app/: Settings.py  main.py  schemas.py
server/app/services/: assistant.py  storage.py
