[project]
name = "server"
version = "0.1.0"
description = "backend service for Knowledge hub"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
